1999-02-28  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        Use the system's iconv() function if available.
        * aclocal.m4 (CL_ICONV): New macro.
        * configure.in: Call it.
        * unixconf.h.in (HAVE_ICONV): New macro.
        * unix.d: Declare iconv_open, iconv, iconv_close.
        * encoding.d (MAKE-ENCODING): Accept strings as well.
          (iconv_mblen, iconv_mbstowcs, iconv_wcslen, iconv_wcstombs): New
          functions.
        * pseudofun.d: Add them.
        * stream.d (test_external_format_arg): Accept strings as well.

1999-02-28  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * configure: Recommend --with-unicode.
        * makemake.in (*/makefile*): Pass --with-unicode to makemake.

1999-02-28  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * macros2.lsp (with-output-to-printer): Declare arg as IGNORE.

1999-02-28  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        Introduce space-efficient immutable strings.
        * lispbibl.d (Rectype_Imm_SmallSstring): New enumeration item.
          (Rectype_mdarray, Rectype_Sbvector, Rectype_bvector, Rectype_Svector,
           Rectype_vector, Rectype_Sstring, Rectype_string,
           Rectype_Imm_Sstring):
          Rearrange and define rectype_unused1 so as to get fast type checks.
          (HAVE_SMALL_SSTRING): New macro.
          (small_sstring_, SmallSstring): New types.
          (Array_type_sstring): Treat Rectype_Imm_SmallSstring like
          Rectype_Imm_Sstring.
          (TheSmallSstring): New macro.
          (vectorp, simplep, array_simplep, general_vector_p, simple_string_p,
           stringp, byte_vector_p, arrayp): Update and optimize.
          (if_recordp): Treat Rectype_Imm_SmallSstring like
          Rectype_Imm_Sstring.
          (case_Rectype_Sstring_above, case_Rectype_string_above,
           case_Rectype_array_above): Likewise.
          (allocate_imm_small_string): New declaration.